--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 appnope==0.1.4
 asttokens==3.0.0
+colorama==0.4.6
 comm==0.2.2
 contourpy==1.3.0
 cycler==0.12.1
@@ -41,6 +42,7 @@ Pygments==2.19.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
+pywin32==310
 pyzmq==26.3.0
 scikit-learn==1.6.1
 scipy==1.13.1
@@ -53,6 +55,7 @@ torch==2.6.0
 torchaudio==2.6.0
 torchvision==0.21.0
 tornado==6.4.2
+tqdm==4.67.1
 traitlets==5.14.3
 typing_extensions==4.13.0
 tzdata==2025.2
