--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ nest-asyncio==1.6.0
 networkx==3.2.1
 numpy==2.0.2
 packaging==24.2
+pandas==2.2.3
 parso==0.8.4
 pexpect==4.9.0
 pillow==11.1.0
@@ -42,10 +43,10 @@ Pygments==2.19.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
-pywin32==310
 pyzmq==26.3.0
 scikit-learn==1.6.1
 scipy==1.13.1
+seaborn==0.13.2
 six==1.17.0
 stack-data==0.6.3
 sympy==1.13.1
@@ -56,6 +57,7 @@ tqdm==4.67.1
 traitlets==5.14.3
 typing_extensions==4.13.0
 tzdata==2025.2
+ucimlrepo==0.0.7
 wcwidth==0.2.13
 xgboost==2.1.4
 zipp==3.21.0
